input field fix alignment, and plenty to xplenty value fixes at staking

--- a/src/assets/scss/partials/_xplenty.scss
+++ b/src/assets/scss/partials/_xplenty.scss
@@ -60,6 +60,13 @@
   border-radius: 6px;
   margin-bottom: 15px;
 }
+.xplenty-tooltip {
+  .tooltip-inner {
+    background: var(--theme-card-bg);
+    color: var(--theme-text-1);
+    opacity: 1;
+  }
+}
 .xplenty-content-container-shadow {
   width: 200px;
   background: linear-gradient(
